--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-      "contante": {
+      "FormAndWork": {
         "projectType": "application",
         "schematics": {},
         "root": "",
@@ -13,7 +13,7 @@
           "build": {
             "builder": "@angular-devkit/build-angular:application",
             "options": {
-              "outputPath": "dist/contante",
+              "outputPath": "dist/FormAndWork",
               "index": "src/index.html",
               "browser": "src/main.ts",
               "polyfills": ["zone.js"],
@@ -63,10 +63,10 @@
             "builder": "@angular-devkit/build-angular:dev-server",
             "configurations": {
               "production": {
-                "buildTarget": "contante:build:production"
+                "buildTarget": "FormAndWork:build:production"
               },
               "development": {
-                "buildTarget": "contante:build:development"
+                "buildTarget": "FormAndWork:build:development"
               }
             },
             "defaultConfiguration": "development"
